--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
 
-Bloc-1.4-Rest-&-Spread-operators
+# Bloc-1.4-Rest-&-Spread-operators
 Bloc-1.5-Array-transformations
 Bloc-1.6-Array-loops
 Bloc-1.7-Promises-&-AsyncAwait
